fix(neo4j): fix metric key name and Property.ofValue